add meta tags for safari ie and cross browser theme as fallback

--- a/index.html
+++ b/index.html
@@ -7,11 +7,24 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="manifest" href="/manifest.json" />
   <title>PWA Mainfest</title>
+  //meta tags for PWA on IOS/Safari
+   <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#f69435">
+    <meta name="apple-mobile-web-app-title" content="PWAMAINIFEST">
+     <link rel="apple-touch-icon" href="/assets/images/icons/icon-192x192.png" sizes="192x192">
+  <link rel="apple-touch-icon" href="/assets/images/icons/icon-256x256.png" sizes="256x256">
+  <link rel="apple-touch-icon" href="/assets/images/icons/icon-384x384.png" sizes="384x384">
+ <link rel="apple-touch-icon" href="/assets/images/icons/icon-512x512.png" sizes="512x512">
+//meta tags for PWA on IE
+   <meta name="msapplication-TileImage" content="/assets/images/icons/icon-192x192.png">
+  <meta name="msapplication-TileColor" content="#f69435">
+  <meta name="theme-color" content="#f69435">
 </head>
 <body>
 
 <h1>PWA Mainfest</h1>
 <h2>Installable Application on Home Screen using PWA.</h2>
+
     
 </body>
 </html>
